@@ -364,9 +364,9 @@ if test x"$ccalign" = xunknown; then
 	fi
 	rm -f conftest.o conftest.c
 fi
-if test x"$ccalign" = xyes; then
-	AC_DEFINE(CCALIGN, 1, [ Define if __attribute__((aligned(16))) works ])
-fi
+
+dnl We apply alignment hints only to cpus that need it.
+dnl See further below for the definition of CCALIGN
 
 dnl ############## Types
 
@@ -679,19 +679,23 @@ case $cpu_type in
   generic)
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_GENERIC -DREAL_IS_FLOAT"
     more_sources="$s_gen"
+    ccalign=no
   ;;
   generic_float)
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_GENERIC -DFLOATOUT -DREAL_IS_FLOAT"
     buffer=disabled
     more_sources="$s_gen"
+    ccalign=no
   ;;
   generic_fpu)
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_GENERIC -DREAL_IS_FLOAT"
     more_sources="$s_gen"
+    ccalign=no
   ;;
   generic_nofpu)
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_GENERIC -DREAL_IS_FIXED"
     more_sources="$s_gen"
+    ccalign=no
   ;;
   altivec)
     ADD_CFLAGS="$ADD_CFLAGS -maltivec -faltivec"
@@ -701,18 +705,22 @@ case $cpu_type in
   i386) 
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_I386 -DREAL_IS_FLOAT"
     more_sources="$s_i386"
+    ccalign=no
   ;;
   i386_fpu) 
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_I386 -DREAL_IS_FLOAT"
     more_sources="$s_i386"
+    ccalign=no
   ;;
   i386_nofpu) 
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_I386 -DREAL_IS_FIXED"
     more_sources="$s_i386"
+    ccalign=no
   ;;
   i486) 
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_I486 -DREAL_IS_FLOAT"
     more_sources="$s_i486"
+    ccalign=no
   ;;
   i586) 
     ADD_CPPFLAGS="$ADD_CPPFLAGS -DOPT_I586 -DREAL_IS_FLOAT"
@@ -775,6 +783,11 @@ done
 
 AC_SUBST(DECODER_OBJ)
 AC_SUBST(DECODER_LOBJ)
+
+dnl Finally insert the code switch for alignment, above cpu selection having possibly changed the setting.
+if test x"$ccalign" = xyes; then
+	AC_DEFINE(CCALIGN, 1, [ Define if __attribute__((aligned(16))) shall be used ])
+fi
 
 
 dnl ############## Output module choice
@@ -1343,7 +1356,7 @@ echo "
   Alignment checks ........ $aligncheck"
 if test x"$aligncheck" = xenabled; then
 	if test x"$ccalign" != xyes; then
-		echo "   (without effect because compiler does not support special alignment)"
+		echo "   (without effect since special alignment is not employed)"
 	fi
 	if test x"$GCC" = xyes; then
 		echo "   (note that newer gcc 4.x versions do not use/need the align check)"
